# generator-scenario

./: README.md  cenario_base.json  cenario_base_pedido.json  generate_schema.py  generator_scenario.py  input_data.json  pyproject.toml  schema.json  schema_basicinfo.json  schema_pedido.json  schema_scenario.json  test_json_schema.py  test_ref_json.py  translate_json_to_schema.py
debug_data/: scenario_1.json  scenario_10.json  scenario_11.json  scenario_12.json  scenario_2.json  scenario_3.json  scenario_4.json  scenario_5.json  scenario_6.json  scenario_7.json  scenario_8.json  scenario_9.json
gt669/: basicinfo.json  optimizeropt.json
scenario_teste/: main.json
translate_json_to_schema/: generate_schema.py
