[tool.poetry]
name = "generator-scenario"
version = "0.1.0"
description = ""
authors = ["Mariana <mariana.marques@enacom.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.23.0"
numpy = "^2.2.2"
faker = "^36.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
